# harlequin

./: .appveyor.yml  CMakeLists.txt  resources.qrc
c++/: colourSlice.cpp  colourSlice.hpp  colourWheel.cpp  colourWheel.hpp  extendedImage.cpp  extendedImage.hpp  hald.cpp  hald.hpp  haldGenerator.cpp  haldGenerator.hpp  histogram.cpp  histogram.hpp  hspLut.cpp  hspLut.hpp  imageProjection.cpp  imageProjection.hpp  labLut.cpp  labLut.hpp  lut.hpp  main.cpp  resultImage.cpp  resultImage.hpp  rgbLut.cpp  rgbLut.hpp  shaderBuilder.cpp  shaderBuilder.hpp
images/: man.jpg.xmp
qml/: BeforeLutAfter.qml  ColourWheel.qml  Colours.js  CurrentPositionMarker.qml  FloatingLabelCombo.qml  Grid.js  Net.qml  NetSquare.qml  Point.qml  Result.qml  ResultImage.qml  SampleGrid.qml  TextureImage.qml  grid.js  main.qml  net.js
shaders/: colour_wheel_vertex.glsl  extended_image_fragment.glsl  hald_fragment.glsl  hald_vertex.glsl  hsp_slice_fragment.glsl  hsp_wheel_fragment.glsl  image_projection_fragment.glsl  image_projection_vertex.glsl  lab_compute.glsl  lab_wheel_fragment.glsl  lch_image_projection_shader_vertex.glsl  lch_image_projection_vertex.glsl  lch_slice_fragment.glsl  lch_wheel_fragment.glsl
